--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>About Us - Global Explorer</title>
-  <link rel="stylesheet" href="about.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="about.css" />
 </head>
 <body>
   <nav class="navbar">
@@ -25,18 +26,31 @@
   <section class="about-content">
     <h2>Who We Are</h2>
     <p>Global Explorer is a travel-focused platform built to help you discover breathtaking beaches, historical temples, and unique cultural landmarks across the globe.</p>
-    
+
     <h2>Our Mission</h2>
     <p>We aim to inspire curiosity, spark adventure, and make travel planning easier by recommending beautiful destinations and hidden gems.</p>
 
-    <h2>Why Choose Us?</h2>
-    <ul>
-      <li>🌴 Expert-curated travel recommendations</li>
-      <li>🕌 Cultural insights & tips</li>
-      <li>🌎 A global vision for every traveler</li>
-    </ul>
+    <!-- TEAM SECTION for rubric -->
+    <h2>Meet the Team</h2>
+    <div class="team">
+      <div class="member">
+        <img src="images/team1.jpg" alt="Team Member - Wahaj" />
+        <h3>Wahaj Yasin</h3>
+        <p>Founder & Frontend Developer</p>
+      </div>
+      <div class="member">
+        <img src="images/team2.jpg" alt="Team Member - Ali" />
+        <h3>Ali Khan</h3>
+        <p>Backend Engineer</p>
+      </div>
+      <div class="member">
+        <img src="images/team3.jpg" alt="Team Member - Fatima" />
+        <h3>Fatima Noor</h3>
+        <p>UI/UX Designer</p>
+      </div>
+    </div>
   </section>
-</body>
-<script src="script.js"></script>
 
+  <script src="script.js" defer></script>
+</body>
 </html>
