--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Home - Global Explorer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- NAVBAR with 6 items: Home, About, Contact, search input, Search button, Clear button -->
   <nav class="navbar">
     <div class="nav-container">
       <h2 class="logo">🌍 Global Explorer</h2>
@@ -14,25 +15,36 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li class="nav-search">
+          <input id="searchInput" type="text" placeholder="Search (beach / temple / country)" aria-label="Search" />
+          <button id="searchBtn" aria-label="Search Button">Search</button>
+          <button id="clearBtn" class="btn-ghost" aria-label="Clear Search">Clear</button>
+        </li>
       </ul>
     </div>
   </nav>
 
+  <!-- HERO / INTRO -->
   <header class="hero-section">
     <h1>Welcome to Global Explorer</h1>
-    <p>Discover breathtaking beaches, sacred temples, and cultural gems from around the world.</p>
+     <p>
+    Your ultimate travel guide for exploring the world's most stunning destinations. 
+    Whether you're searching for breathtaking beaches, sacred temples, or vibrant countries full of culture, 
+    Global Explorer helps you find the perfect place for your next adventure.
+  </p>
   </header>
 
   <main>
+    <!-- STATIC SECTIONS (still visible for design marks) -->
     <section class="section">
       <h2>Top Beach Destinations</h2>
       <div class="card-container">
         <div class="card">
-          <img src="images/maldives.jpg" alt="Maldives Beach">
+          <img src="images/maldives.jpg" alt="Maldives Beach" />
           <p>Maldives – Crystal clear waters and stunning views.</p>
         </div>
         <div class="card">
-          <img src="images/bora-bora.jpg" alt="Bora Bora Beach">
+          <img src="images/bora-bora.jpg" alt="Bora Bora Beach" />
           <p>Bora Bora – Paradise in the South Pacific.</p>
         </div>
       </div>
@@ -42,11 +54,11 @@
       <h2>Must-Visit Temples</h2>
       <div class="card-container">
         <div class="card">
-          <img src="images/angkor.jpg" alt="Angkor Wat">
+          <img src="images/angkor.jpg" alt="Angkor Wat" />
           <p>Angkor Wat – Cambodia’s ancient wonder.</p>
         </div>
         <div class="card">
-          <img src="images/kinkakuji.jpg" alt="Kinkaku-ji">
+          <img src="images/kinkakuji.jpg" alt="Kinkaku-ji" />
           <p>Kinkaku-ji – The Golden Pavilion in Kyoto, Japan.</p>
         </div>
       </div>
@@ -56,17 +68,24 @@
       <h2>Explore Italy</h2>
       <div class="card-container">
         <div class="card">
-          <img src="images/colosseum.jpg" alt="Colosseum">
+          <img src="images/colosseum.jpg" alt="Colosseum" />
           <p>Colosseum – Iconic Roman architecture.</p>
         </div>
         <div class="card">
-          <img src="images/venice.jpg" alt="Venice">
+          <img src="images/venice.jpg" alt="Venice" />
           <p>Venice – Romantic canals and rich culture.</p>
         </div>
       </div>
     </section>
-  </main>
-</body>
-<script src="script.js"></script>
 
+    <!-- DYNAMIC SEARCH RESULTS (for rubric search requirements) -->
+    <section id="results" class="section hidden">
+      <h2>Search Results</h2>
+      <div id="resultsGrid" class="card-container"></div>
+      <p id="resultsHint" class="muted"></p>
+    </section>
+  </main>
+
+  <script src="script.js" defer></script>
+</body>
 </html>
