Update final make all chnages

--- a/about.html
+++ b/about.html
@@ -7,13 +7,20 @@
   <link rel="stylesheet" href="about.css" />
 </head>
 <body>
-  <nav class="navbar">
+
+
+    <nav class="navbar">
     <div class="nav-container">
       <h2 class="logo">🌍 Global Explorer</h2>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About Us</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li class="nav-search">
+          <!-- <input id="searchInput" type="text" placeholder="Search (beach / temple / country)" aria-label="Search" />
+          <button id="searchBtn" aria-label="Search Button">Search</button>
+          <button id="clearBtn" class="btn-ghost" aria-label="Clear Search">Clear</button> -->
+        </li>
       </ul>
     </div>
   </nav>
@@ -51,6 +58,6 @@
     </div>
   </section>
 
-  <script src="script.js" defer></script>
+   <script src="script.js" defer></script>
 </body>
 </html>
