--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,20 @@
   <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="contact.html" class="active">Contact Us</a></li>
-    </ul>
+   <nav class="navbar">
+    <div class="nav-container">
+      <h2 class="logo">🌍 Global Explorer</h2>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <!-- <li class="nav-search">
+          <input id="searchInput" type="text" placeholder="Search (beach / temple / country)" aria-label="Search" />
+          <button id="searchBtn" aria-label="Search Button">Search</button>
+          <button id="clearBtn" class="btn-ghost" aria-label="Clear Search">Clear</button>
+        </li> -->
+      </ul>
+    </div>
   </nav>
 
   <section class="contact-container">
